<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    tools:context="edu.gatech.cs.foodies.RestaurantInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/restaurant_icon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="25dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_location"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/detail_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingTop="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/monday"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/monday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingTop="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tuesday"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tuesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingTop="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wednesday"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/wednesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingTop="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/thursday"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/thursday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingTop="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/friday"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/friday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingTop="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/satureday"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/saturday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingTop="3dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sunday"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/sunday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
